--- a/backend/GraficaModerna.API/GraficaModerna.API.csproj
+++ b/backend/GraficaModerna.API/GraficaModerna.API.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GraficaModerna.Application\GraficaModerna.Application.csproj" />
+    <ProjectReference Include="..\GraficaModerna.Infrastructure\GraficaModerna.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
