--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.20.0",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
