--- a/backend/GraficaModerna.Infrastructure/GraficaModerna.Infrastructure.csproj
+++ b/backend/GraficaModerna.Infrastructure/GraficaModerna.Infrastructure.csproj
@@ -9,6 +9,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
+		<PackageReference Include="Stripe.net" Version="43.13.0" />
 	</ItemGroup>
 
 	<PropertyGroup>
