--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.5.3",
     "axios": "^1.6.0",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "dompurify": "^3.3.0",
     "framer-motion": "^12.23.24",
@@ -18,8 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^6.20.0",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^6.20.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
