--- a/backend/GraficaModerna.Application/GraficaModerna.Application.csproj
+++ b/backend/GraficaModerna.Application/GraficaModerna.Application.csproj
@@ -9,7 +9,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoMapper" Version="13.0.1" />
+		<!-- AutoMapper removed: mappings are manual now -->
 		<PackageReference Include="FluentValidation" Version="11.9.0" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
