--- a/backend/GraficaModerna.API/GraficaModerna.API.csproj
+++ b/backend/GraficaModerna.API/GraficaModerna.API.csproj
@@ -21,6 +21,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
 	</ItemGroup>
 
 	<ItemGroup>
