--- a/backend/GraficaModerna.API/appsettings.json
+++ b/backend/GraficaModerna.API/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "CorsOrigins": [
+    "https://localhost:5173",
+    "http://localhost:5173",
+    "http://localhost:3000"
+  ],
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
