--- a/backend/GraficaModerna.API/Properties/launchSettings.json
+++ b/backend/GraficaModerna.API/Properties/launchSettings.json
@@ -1,15 +1,5 @@
 {
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5150"
-    },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -18,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7255;http://localhost:5150"
+      "applicationUrl": "https://localhost:7255" 
     },
     "IIS Express": {
       "commandName": "IISExpress",
