--- a/backend/GraficaModerna.API/appsettings.json
+++ b/backend/GraficaModerna.API/appsettings.json
@@ -7,9 +7,7 @@
   },
   "AllowedHosts": "*",
   "CorsOrigins": [
-    "https://localhost:5173",
-    "http://localhost:5173",
-    "http://localhost:3000"
+    "url do dominio"
   ],
   "ConnectionStrings": {
     "DefaultConnection": ""
